src/test/deca/context/valid/SimpleDeclClassWithMain.deca
class Simple{
    int x;
    int y;
    int z;
}

{
    Simple s = new Simple():
    s.x = 1;
    S.y = 2;
    s.z = 3;
}