src/test/deca/context/invalid/BadGetUsage.deca
class A{
    int x;
    float getX();
    boolean getX();
}